--- a/DELISH/about-us.html
+++ b/DELISH/about-us.html
@@ -60,7 +60,14 @@
       
 </header>
 <!-- Header Section End -->
-<br>
+<section class="hero-chef">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
+    <h1>CHEF DETAILS</h1>
+    <p>HOME / CHEF DETAILS</p>
+  </div>
+</section>
+
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
