--- a/DELISH/contact.html
+++ b/DELISH/contact.html
@@ -61,6 +61,16 @@
 </header>
 <!-- Header Section End -->
 
+<!-- Hero Section Start -->
+<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
+    <h1>OUR CHEF</h1>
+    <p>HOME / OUR CHEF</p>
+  </div>
+</section>
+<!-- Hero Section End -->
+
 <!-- contact Section Start -->
 
 <div class="contact-profile-section">
