--- a/DELISH/index.html
+++ b/DELISH/index.html
@@ -48,7 +48,7 @@
           <li class="dropdown">
             <a href="#">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
       <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
