--- a/DELISH/team.html
+++ b/DELISH/team.html
@@ -60,7 +60,15 @@
       
 </header>
 <!-- Header Section End -->
-<br>
+<!-- Hero Section Start -->
+<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
+    <h1>OUR CHEF</h1>
+    <p>HOME / OUR CHEF</p>
+  </div>
+</section>
+<!-- Hero Section End -->
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
