--- a/DELISH/index.html
+++ b/DELISH/index.html
@@ -46,7 +46,7 @@
             <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
