--- a/DELISH/about-us.html
+++ b/DELISH/about-us.html
@@ -43,15 +43,15 @@
             <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-      <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
+      <button class="book-btn" onclick="window.location.href='reservation.html'">BOOK A TABLE <span class="arrow">&#8594;</span></button>
       <div class="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -60,7 +60,7 @@
       
 </header>
 <!-- Header Section End -->
-<section class="hero-chef">
+<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
     <h1>CHEF DETAILS</h1>
