--- a/DELISH/blog.html
+++ b/DELISH/blog.html
@@ -46,7 +46,7 @@
             <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li><a href="#">CONTACT</a></li>
         </ul>
@@ -60,7 +60,6 @@
       
 </header>
 <!-- Header Section End -->
-
 <!-- Hero Section Start -->
 <section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
@@ -70,58 +69,6 @@
   </div>
 </section>
 <!-- Hero Section End -->
-
-<!-- contact Section Start -->
-
-<div class="contact-profile-section">
-  <div class="contact-profile-card">
-    <div class="contact-profile-left">
-      <h2>Richard John</h2>
-      <div class="contact-profile-title">Founder &amp; CEO</div>
-      <p class="contact-profile-desc">
-        Sam consequat mauris conubia inceptos nostra rutrum morbi sagittis pulvinar, commodo curabitur. Neceans fermentum magna tempus nisl ullamcorper, ante auctor magnis pretium eu lectus euismod platea. Congue sociosqu nostra est urna pellentesque placerat euismod bibendum.
-      </p>
-      <div class="contact-profile-info-grid">
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-user-clock"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Experience</div>
-            <div class="contact-profile-info-value">More Than 10 Years</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-envelope"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Email</div>
-            <div class="contact-profile-info-value">info@agency.com</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-phone"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Phone</div>
-            <div class="contact-profile-info-value">+(256) 58621469581</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-fax"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Fax</div>
-            <div class="contact-profile-info-value">+2568145632</div>
-          </div>
-        </div>
-      </div>
-      <button class="contact-profile-btn">CONTACT ME</button>
-    </div>
-    <div class="contact-profile-right">
-      <img src="assests/img122.png" alt="Chef" />
-    </div>
-  </div>
-</div>
-
-<!-- contact Section End -->
-
-<br>
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
