--- a/DELISH/about-us.html
+++ b/DELISH/about-us.html
@@ -37,10 +37,10 @@
         <ul class="nav-links">
           <li><a href="index.html">HOME</a></li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="gallery.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop-detail.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
             <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
@@ -60,11 +60,11 @@
       
 </header>
 <!-- Header Section End -->
-<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+<section class="hero-chef" style="background: url('assests/aboutus.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>CHEF DETAILS</h1>
-    <p>HOME / CHEF DETAILS</p>
+    <h1>ABOUT US</h1>
+    <p>HOME / ABOUT US</p>
   </div>
 </section>
 
@@ -105,11 +105,11 @@
     <div class="footer-col">
       <h4>LINKS</h4>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Meet our team</a></li>
-        <li><a href="#">Case stories</a></li>
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team-details.html">Meet our team</a></li>
+        <li><a href="blog-details.html">Case stories</a></li>
+        <li><a href="blog.html">Latest News</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="footer-col">
