--- a/DELISH/contact.html
+++ b/DELISH/contact.html
@@ -62,11 +62,11 @@
 <!-- Header Section End -->
 
 <!-- Hero Section Start -->
-<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+<section class="hero-chef" style="background: url('assests/contact.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>OUR CHEF</h1>
-    <p>HOME / OUR CHEF</p>
+    <h1>CONTACT US</h1>
+    <p>HOME / CONTACT US</p>
   </div>
 </section>
 <!-- Hero Section End -->
