--- a/DELISH/gallery.html
+++ b/DELISH/gallery.html
@@ -37,21 +37,21 @@
         <ul class="nav-links">
           <li><a href="index.html">HOME</a></li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="gallery.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop-detail.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-      <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
+      <button class="book-btn" onclick="window.location.href='reservation.html'">BOOK A TABLE <span class="arrow">&#8594;</span></button>
       <div class="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -60,68 +60,52 @@
       
 </header>
 <!-- Header Section End -->
-
 <!-- Hero Section Start -->
-<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+
+<section class="hero-chef" style="background: url('assests/gallery.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>OUR CHEF</h1>
-    <p>HOME / OUR CHEF</p>
+    <h1>GALLERY PAGE</h1>
+    <p>HOME / GALLERY PAGE</p>
   </div>
 </section>
 <!-- Hero Section End -->
 
-<!-- contact Section Start -->
-
-<div class="contact-profile-section">
-  <div class="contact-profile-card">
-    <div class="contact-profile-left">
-      <h2>Richard John</h2>
-      <div class="contact-profile-title">Founder &amp; CEO</div>
-      <p class="contact-profile-desc">
-        Sam consequat mauris conubia inceptos nostra rutrum morbi sagittis pulvinar, commodo curabitur. Neceans fermentum magna tempus nisl ullamcorper, ante auctor magnis pretium eu lectus euismod platea. Congue sociosqu nostra est urna pellentesque placerat euismod bibendum.
-      </p>
-      <div class="contact-profile-info-grid">
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-user-clock"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Experience</div>
-            <div class="contact-profile-info-value">More Than 10 Years</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-envelope"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Email</div>
-            <div class="contact-profile-info-value">info@agency.com</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-phone"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Phone</div>
-            <div class="contact-profile-info-value">+(256) 58621469581</div>
-          </div>
-        </div>
-        <div class="contact-profile-info">
-          <span class="contact-profile-icon"><i class="fa-solid fa-fax"></i></span>
-          <div>
-            <div class="contact-profile-info-label">Fax</div>
-            <div class="contact-profile-info-value">+2568145632</div>
-          </div>
-        </div>
-      </div>
-      <button class="contact-profile-btn">CONTACT ME</button>
-    </div>
-    <div class="contact-profile-right">
-      <img src="assests/img122.png" alt="Chef" />
-    </div>
+<!-- Food Gallery Section Start -->
+<section class="food-gallery-section">
+  <div class="gallery-header">
+    <span class="gallery-label">FOOD GALLERY</span>
+    <h2>FOOD GALLERY POSTS</h2>
+    <div class="gallery-underline"><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i><i class="fa-solid fa-diamond"></i> </div>
   </div>
-</div>
+  <div class="gallery-wrapper">
 
-<!-- contact Section End -->
+    <div class="gallery-grid" id="galleryGrid">
+      <!-- Gallery items (replace src with your images) -->
+      <div class="gallery-item">
+        <img src="assests/Rectangle 122.png" alt="Food 1">
+      </div>
+      <div class="gallery-item">
+        <img src="assests/g1.jpg" alt="Food 2">
+      </div>
+      <div class="gallery-item">
+        <img src="assests/g2.jpg" alt="Food 3">
+      </div>
+      <div class="gallery-item">
+        <img src="assests/g3.jpg" alt="Food 4">
+      </div>
+      <div class="gallery-item">
+        <img src="assests/g4.jpg" alt="Food 5">
+      </div>
+      <div class="gallery-item">
+        <img src="assests/g5.jpg" alt="Food 6">
+      </div>
+    </div>
+  
+  </div>
+</section>
+<!-- Food Gallery Section End -->
 
-<br>
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
@@ -159,11 +143,11 @@
     <div class="footer-col">
       <h4>LINKS</h4>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Meet our team</a></li>
-        <li><a href="#">Case stories</a></li>
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team-details.html">Meet our team</a></li>
+        <li><a href="blog-details.html">Case stories</a></li>
+        <li><a href="blog.html">Latest News</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="footer-col">
