--- a/DELISH/team-details.html
+++ b/DELISH/team-details.html
@@ -37,21 +37,21 @@
         <ul class="nav-links">
           <li><a href="index.html">HOME</a></li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="gallery.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop-detail.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
             <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-      <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
+      <button class="book-btn" onclick="window.location.href='reservation.html'">BOOK A TABLE <span class="arrow">&#8594;</span></button>
       <div class="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -60,15 +60,64 @@
       
 </header>
 <!-- Header Section End -->
-<!-- Hero Section Start -->
-<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+<section class="hero-chef" style="background: url('assests/chef.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>OUR CHEF</h1>
-    <p>HOME / OUR CHEF</p>
+    <h1>CHEF DETAILS</h1>
+    <p>HOME / CHEF DETAILS</p>
   </div>
 </section>
 <!-- Hero Section End -->
+
+<!-- Team Details Section Start -->
+<div class="contact-profile-section">
+  <div class="contact-profile-card">
+    <div class="contact-profile-left">
+      <h2>Richard John</h2>
+      <div class="contact-profile-title">Founder &amp; CEO</div>
+      <p class="contact-profile-desc">
+        Sam consequat mauris conubia inceptos nostra rutrum morbi sagittis pulvinar, commodo curabitur. Neceans fermentum magna tempus nisl ullamcorper, ante auctor magnis pretium eu lectus euismod platea. Congue sociosqu nostra est urna pellentesque placerat euismod bibendum.
+      </p>
+      <div class="contact-profile-info-grid">
+        <div class="contact-profile-info">
+          <span class="contact-profile-icon"><i class="fa-solid fa-user-clock"></i></span>
+          <div>
+            <div class="contact-profile-info-label">Experience</div>
+            <div class="contact-profile-info-value">More Than 10 Years</div>
+          </div>
+        </div>
+        <div class="contact-profile-info">
+          <span class="contact-profile-icon"><i class="fa-solid fa-envelope"></i></span>
+          <div>
+            <div class="contact-profile-info-label">Email</div>
+            <div class="contact-profile-info-value">info@agency.com</div>
+          </div>
+        </div>
+        <div class="contact-profile-info">
+          <span class="contact-profile-icon"><i class="fa-solid fa-phone"></i></span>
+          <div>
+            <div class="contact-profile-info-label">Phone</div>
+            <div class="contact-profile-info-value">+(256) 58621469581</div>
+          </div>
+        </div>
+        <div class="contact-profile-info">
+          <span class="contact-profile-icon"><i class="fa-solid fa-fax"></i></span>
+          <div>
+            <div class="contact-profile-info-label">Fax</div>
+            <div class="contact-profile-info-value">+2568145632</div>
+          </div>
+        </div>
+      </div>
+      <button class="contact-profile-btn">CONTACT ME</button>
+    </div>
+    <div class="contact-profile-right">
+      <img src="assests/img122.png" alt="Chef" />
+    </div>
+  </div>
+</div>
+
+<!-- Team Details Section End -->
+
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
@@ -106,11 +155,11 @@
     <div class="footer-col">
       <h4>LINKS</h4>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Meet our team</a></li>
-        <li><a href="#">Case stories</a></li>
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team-details.html">Meet our team</a></li>
+        <li><a href="blog-details.html">Case stories</a></li>
+        <li><a href="blog.html">Latest News</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="footer-col">
