--- a/DELISH/shop.html
+++ b/DELISH/shop.html
@@ -37,21 +37,21 @@
         <ul class="nav-links">
           <li><a href="index.html">HOME</a></li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="gallery.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop-detail.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
             <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-      <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
+      <button class="book-btn" onclick="window.location.href='reservation.html'">BOOK A TABLE <span class="arrow">&#8594;</span></button>
       <div class="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -60,15 +60,135 @@
       
 </header>
 <!-- Header Section End -->
-<!-- Hero Section Start -->
-<section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
+
+<!-- shop hero section start -->
+<section class="hero-chef" style="background: url('assests/shop.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>OUR CHEF</h1>
-    <p>HOME / OUR CHEF</p>
+    <h1>SHOP PAGE</h1>
+    <p>HOME / SHOP PAGE</p>
   </div>
 </section>
-<!-- Hero Section End -->
+<!-- shop hero section end -->
+
+<!-- shop section start -->
+<section class="menu-section">
+  <div class="menu-grid">
+    <!-- Card 1 -->
+    <div class="menu-card">
+      <img src="assests/shopdetail.jpg" alt="Beef Bourguignon">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Beef Bourguignon</h3>
+        <span class="price">$25.50</span>
+      </div>
+    </div>
+    <!-- Card 2 -->
+    <div class="menu-card">
+      <img src="assests/s2.jpg" alt="Spicy Tuna Tartare">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Spicy Tuna Tartare</h3>
+        <span class="price">$19.50</span>
+      </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="menu-card">
+      <img src="assests/s1.jpg" alt="Margherita Pizza">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Margherita Pizza</h3>
+        <span class="price">$14.50</span>
+      </div>
+    </div>
+    <!-- Card 4 -->
+    <div class="menu-card">
+      <img src="assests/s3.jpg" alt="Braised Short Ribs">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Braised Short Ribs</h3>
+        <span class="price">$24.50</span>
+      </div>
+    </div>
+    <!-- Card 5 -->
+    <div class="menu-card">
+      <img src="assests/s4.jpg" alt="Vegan Buddha Bowl">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Vegan Buddha Bowl</h3>
+        <span class="price">$15.50</span>
+      </div>
+    </div>
+    <!-- Card 6 -->
+    <div class="menu-card">
+      <img src="assests/s5.jpg" alt="Chicken Alfredo Pasta">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Chicken Alfredo Pasta</h3>
+        <span class="price">$17.50</span>
+      </div>
+    </div>
+    <!-- Card 7 -->
+    <div class="menu-card">
+      <img src="assests/s6.jpg" alt="Classic Caesar Salad">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Classic Caesar Salad</h3>
+        <span class="price">$13.50</span>
+      </div>
+    </div>
+    <!-- Card 8 -->
+    <div class="menu-card">
+      <img src="assests/m6.jpg" alt="Roasted Vegetable Platter">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Roasted Vegetable Platter</h3>
+        <span class="price">$12.50</span>
+      </div>
+    </div>
+    <!-- Card 9 -->
+    <div class="menu-card">
+      <img src="assests/s7.jpg" alt="Pulled Pork Sandwich">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Pulled Pork Sandwich</h3>
+        <span class="price">$16.50</span>
+      </div>
+    </div>
+    <!-- Card 10 -->
+    <div class="menu-card">
+      <img src="assests/s8.jpg" alt="Ahi Poke Bowl">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Ahi Poke Bowl</h3>
+        <span class="price">$18.50</span>
+      </div>
+    </div>
+    <!-- Card 11 -->
+    <div class="menu-card">
+      <img src="assests/s9.jpg" alt="Chocolate Lava Cake">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Chocolate Lava Cake</h3>
+        <span class="price">$9.50</span>
+      </div>
+    </div>
+    <!-- Card 12 -->
+    <div class="menu-card">
+      <img src="assests/s10.jpg" alt="Lobster Bisque">
+      <div class="menu-info">
+        <div class="stars">★★★★★</div>
+        <h3>Lobster Bisque</h3>
+        <span class="price">$13.50</span>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- shop section end -->
+
+
+
 <script src="js/main.js"></script>
 
 <!-- before footer Section Start -->
@@ -106,11 +226,11 @@
     <div class="footer-col">
       <h4>LINKS</h4>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Meet our team</a></li>
-        <li><a href="#">Case stories</a></li>
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team-details.html">Meet our team</a></li>
+        <li><a href="blog-details.html">Case stories</a></li>
+        <li><a href="blog.html">Latest News</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="footer-col">
