--- a/DELISH/team.html
+++ b/DELISH/team.html
@@ -37,21 +37,21 @@
         <ul class="nav-links">
           <li><a href="index.html">HOME</a></li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="gallery.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop-detail.html">PAGES <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
-            <a href="#">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
+            <a href="shop.html">SHOP <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
           <li class="dropdown">
             <a href="blog.html">BLOG <span><i class="fa-solid fa-chevron-down"></i></span></a>
           </li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-      <button class="book-btn">BOOK A TABLE <span class="arrow">&#8594;</span></button>
+      <button class="book-btn" onclick="window.location.href='reservation.html'">BOOK A TABLE <span class="arrow">&#8594;</span></button>
       <div class="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -61,15 +61,56 @@
 </header>
 <!-- Header Section End -->
 <!-- Hero Section Start -->
+
 <section class="hero-chef" style="background: url('assests/ourchef.jpg') center center/cover no-repeat;">
   <div class="hero-overlay"></div>
   <div class="hero-content">
-    <h1>OUR CHEF</h1>
-    <p>HOME / OUR CHEF</p>
+    <h1>CHEF DETAILS</h1>
+    <p>HOME / CHEF DETAILS</p>
   </div>
 </section>
 <!-- Hero Section End -->
+
+<!-- Team Section Start -->
+<section class="team-grid">
+  <div class="team-member">
+    <img src="assests/team1.jpg" alt="Kuman Tunman">
+    <h3>KUMAN TUNMAN</h3>
+    <p>WAITER</p>
+  </div>
+  <div class="team-member">
+    <img src="assests/team2.jpg" alt="Benjamin Kenneth">
+    <h3>BENJAMIN KENNETH</h3>
+    <p>WAITER</p>
+  </div>
+  <div class="team-member">
+    <img src="assests/team1.jpg" alt="Matthew Nathaniel">
+    <h3>MATTHEW NATHANIEL</h3>
+    <p>WAITER</p>
+  </div>
+  <div class="team-member">
+    <img src="assests/team2.jpg" alt="George James">
+    <h3>GEORGE JAMES</h3>
+    <p>WAITER</p>
+  </div>
+  <div class="team-member">
+    <img src="assests/team1.jpg" alt="Edward May">
+    <h3>EDWARD MAY</h3>
+    <p>WAITER</p>
+  </div>
+  <div class="team-member">
+    <img src="assests/team2.jpg" alt="Patrick Robert">
+    <h3>PATRICK ROBERT</h3>
+    <p>WAITER</p>
+  </div>
+</section>
+
+<!-- Team Section End -->
+
+
+
 <script src="js/main.js"></script>
+
 
 <!-- before footer Section Start -->
 
@@ -106,11 +147,11 @@
     <div class="footer-col">
       <h4>LINKS</h4>
       <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Meet our team</a></li>
-        <li><a href="#">Case stories</a></li>
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team-details.html">Meet our team</a></li>
+        <li><a href="blog-details.html">Case stories</a></li>
+        <li><a href="blog.html">Latest News</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div class="footer-col">
